--- a/public/mylistings.html
+++ b/public/mylistings.html
@@ -16,6 +16,7 @@
   </header>
 
   <h1>My Listings</h1>
+  <input type="text" id="searchMyListings" placeholder="Search your listings..." />
   <div id="myListings"></div>
 
   <script src="mylistings.js"></script>
