--- a/public/login.html
+++ b/public/login.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Login - Community Resource Network</title>
+  <title>ComShare</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="shared.js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
   <h1>Login</h1>
@@ -27,6 +30,7 @@
       <button id="acceptTermsBtn">I Agree</button>
     </div>
   </div>
+  <script src="shared.js"></script>
 
   <script>
     document.getElementById('loginForm').addEventListener('submit', async function (e) {
