--- a/public/register.html
+++ b/public/register.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Register - Community Resource Network</title>
+  <title>ComShare</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="shared.js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
   <h1>Register</h1>
@@ -15,6 +18,7 @@
 
   <p id="message"></p>
   <a href="login.html">Already have an account? Login here</a>
+  <script src="shared.js"></script>
 
   <script>
     document.getElementById('registerForm').addEventListener('submit', async function (e) {
