--- a/public/mylistings.html
+++ b/public/mylistings.html
@@ -2,23 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Listings</title>
+  <title>ComShare</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="shared.js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <header>
-    <nav>
-    <a href="index.html">Main Listings</a> |
-    <a href="toolshare.html">Tool Share</a> |
-    <a href="mylistings.html">My Listings</a> |
-    <span id="authLinks"></span>
-  </nav>
-  </header>
 
   <h1>My Listings</h1>
   <input type="text" id="searchMyListings" placeholder="Search your listings..." />
   <div id="myListings"></div>
 
   <script src="mylistings.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
