all requirements met

--- a/public/toolshare.html
+++ b/public/toolshare.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ComShare</title>
+  <title>CommShare</title>
   <link rel="stylesheet" href="styles.css">
   <script src="shared.js" defer></script>
   <script src="script.js" defer></script>
