--- a/public/register.html
+++ b/public/register.html
@@ -1,44 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>ComShare</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <title>CommShare – Register</title>
+  <link rel="stylesheet" href="styles.css" />
   <script src="shared.js" defer></script>
-  <script src="script.js" defer></script>
 </head>
 <body>
-  <h1>Register</h1>
+  <!-- Header injected by shared.js -->
 
-  <form id="registerForm">
-    <input type="text" id="username" placeholder="Username" required />
-    <input type="password" id="password" placeholder="Password" required />
-    <button type="submit">Register</button>
-  </form>
+  <main>
+    <h1>Register</h1>
 
-  <p id="message"></p>
-  <a href="login.html">Already have an account? Login here</a>
-  <script src="shared.js"></script>
+    <!-- Registration form temporarily disabled
+    <form id="registerForm">
+      <input type="text" id="username" placeholder="Username" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <button type="submit">Register</button>
+    </form>
 
-  <script>
-    document.getElementById('registerForm').addEventListener('submit', async function (e) {
-      e.preventDefault();
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
+    <p id="message"></p>
+    <a href="login.html">Already have an account? Login here</a>
 
-      const res = await fetch('/api/auth/register', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ username, password })
+    <script>
+      document.getElementById('registerForm').addEventListener('submit', async function (e) {
+        e.preventDefault();
+        const username = document.getElementById('username').value;
+        const password = document.getElementById('password').value;
+
+        const res = await fetch('/api/auth/register', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ username, password })
+        });
+
+        const data = await res.json();
+        document.getElementById('message').textContent = data.message;
+
+        if (res.status === 201) {
+          setTimeout(() => window.location.href = 'login.html', 1000);
+        }
       });
+    </script>
+    -->
 
-      const data = await res.json();
-      document.getElementById('message').textContent = data.message;
+    <!-- Access restriction notice -->
+    <div style="margin-top: 2em; background: #fff3cd; padding: 10px; border-left: 4px solid #ffc107; max-width: 600px; margin-left: auto; margin-right: auto;">
+      <strong>Note:</strong> Registration is currently restricted. <br />
+      Please contact the administrator at <span id="adminEmail">Loading...</span> to request access.
+    </div>
+  </main>
 
-      if (res.status === 201) {
-        setTimeout(() => window.location.href = 'login.html', 1000);
-      }
-    });
+  <!-- Fetch admin contact dynamically -->
+  <script>
+    fetch('/api/auth/admin-contact')
+      .then(res => res.json())
+      .then(data => {
+        if (data.contact) {
+          const email = data.contact;
+          document.getElementById('adminEmail').innerHTML = `<a href="mailto:${email}">${email}</a>`;
+        } else {
+          document.getElementById('adminEmail').innerText = 'unavailable';
+        }
+      })
+      .catch(() => {
+        document.getElementById('adminEmail').innerText = 'unavailable';
+      });
   </script>
 </body>
 </html>
